@@ -4,3 +4,6 @@
 If you have theme files for node-view-$viewname of comment-view-$viewname you have
 to convert them to node--view--$viewname or comment--view--$viewname.
 
+<h4>Updating table templates</h4>
+The class variable was renamed to $classes. Additional if you want to add 
+classes, you should add it to $classes_array and drupal will automatically convert it to the $classes string.
