@@ -486,3 +486,4 @@ Views 3.x-7.x-dev
     o #972934 by dereine: Fix Node: User posted or commented.
     o by dereine: Preview shouldn't expect to have the sql plugin, always.
     o #960596 by dereine: Argument in preview aren't escaped.
+    o #983166 by dereine: Rename $class to $classes in the table template file and write some updating documentation.
